--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -1,37 +1,23 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical">
 
 
-    <FrameLayout
-        android:id="@+id/contentPanel"
+    <android.support.v4.view.ViewPager
+        android:id="@+id/mHomePager"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_weight="1" />
 
-    <LinearLayout
+    <android.support.design.widget.TabLayout
+        android:id="@+id/mHomeTab"
         android:layout_width="match_parent"
         android:layout_height="50dp"
-        android:orientation="horizontal">
+        app:tabIndicatorColor="#00000000"
+        app:tabMode="fixed"
+        app:tabBackground="@drawable/selector_home_tab"/>
 
-        <Button
-            android:id="@+id/homeButton"
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:layout_weight="1"
-            android:background="?android:attr/selectableItemBackground"
-            android:gravity="center"
-            android:text="首页" />
-
-        <Button
-            android:id="@+id/mapButton"
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:layout_weight="1"
-            android:background="?android:attr/selectableItemBackground"
-            android:gravity="center"
-            android:text="地图" />
-    </LinearLayout>
 </LinearLayout>
